--- a/project.css
+++ b/project.css
@@ -163,19 +163,24 @@ div.desc {
   clear: both;
 }
 
-/* #stories_page{
-  background-color: black;
+#trip_form {
+    background-color: white;
+  margin: 0 auto;
+  width: 500px;
+  padding: 1em;
+  border: 1px solid #CCC;
+  border-radius: 1em;
 }
 
-.story_container{
-  display: flex;
-  align-items: center;
-  justify-content: center;
+label {
+    display: inline-block;
+    width: 90px;
+    text-align: left;
+  }
+  #form_button{
+      color:black;
+      
+    }
+#form_button:hover{
+    background-color: rgb(97, 224, 233);;
 }
-.story_image{
-  flex-basis: 40%;
-}
-.story_text {
-  font-size: medium;
-  padding-left: 20px;
-} */
