--- a/project.css
+++ b/project.css
@@ -319,3 +319,13 @@ label {
 #ind-a:hover + #ind-div {
     display: block;
 }
+
+#headerPopup{
+    width:75%;
+    margin:0 auto;
+  }
+  
+  #headerPopup iframe{
+    width:100%;
+    margin:0 auto;
+  }
